Add image folder and file content
Such as:
-included project details in README.md
-recipes pages content
-created image folder and also added content to it.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
     <body>
      <h1>Odins Recipes</h1>
-     <a href="recipes/afang.html">Afang Soup</a>
-     <a href="recipes/banga.html">Banga Soup</a>
-     <a href="recipes/nigerian_jellof.html">Nigerian Jellof</a>
-     <a href="recipes/okro.html">Okro Soup</a>
-     <a href="recipes/palmoil_rice.html">Palm-Oil Rice</a>
+     <ul>
+        <li><a href="recipes/afang.html">Afang Soup</a></li>
+        <li><a href="recipes/banga.html">Banga Soup</a></li>
+        <li><a href="recipes/nigerian_jellof.html">Nigerian Jellof</a></li>
+        <li><a href="recipes/okro.html">Okro Soup</a></li>
+        <li><a href="recipes/palmoil_rice.html">Palm-Oil Rice</a></li>
+     </ul>
     </body>
 </html>
