--- a/recipes/afang.html
+++ b/recipes/afang.html
@@ -7,32 +7,55 @@
 
     <body>
         <h1>Afang Soup</h1>
-        <img src="" alt="Afang soup" 
+        <img src="../images/afang_soup.jpg" alt="Afang Soup" 
         height="310" width="310">
+        <img src="image.jpg" alt="Afang Soup">
+        <p>Photo by <a href="https://commons.wikimedia.org/wiki/User:Aderiqueza">Aderiqueza</a>
+             / <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC BY-SA 4.0</a></p>
+
+        
         <h2>Description</h2>
-        <p></p>
+        <p>Afang soup is a rich, Nigerian vegetable soup made primarily from 
+            two leafy greens: pounded Afang leaves (also known as Okazi) 
+            and water leaves, combined with a flavorful blend of meats, fish, 
+            and seafood. Originating from the Efik and Ibibio people of Cross River 
+            and Akwa Ibom States in Southern Nigeria, this hearty and nutritious soup 
+            is a celebratory dish often served at festivals and special occasions. </p>
         <h2>Ingredient</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>15 cups sliced fresh waterleaves</li>
+            <li>1/2 cup of ground crayfish</li>
+            <li>3 cups cups ground Ukazi leaves</li>
+            <li>3 cubes of knorr maggi</li>
+            <li>1 stockfish head</li>
+            <li>2 medium sized dried or roasted fish</li>
+            <li>1.5 cup of palm oil</li>
+            <li>1 cup of periwinkles</li>
+            <li>Snails</li>
+            <li>Salt and Pepper to taste</li>
+            <li>Red fresh pepper</li>
+            <li>3 KG Assorted meat</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Grind the ukazi leaves, 
+                it acts as the thickener for this soup.</li>
+            <li>Season the meat with a half cup of sliced onions, salt,
+                 two seasoning cubes and other spice of choice</li>
+            <li>Slice the water leaves and set aside in a sieve so 
+                excess water will drain away.</li>
+            <li>Wash the stockfish, dried fish and add them to the cooking meat,
+                 let them cook till they are soft and the pot is almost dry.</li>
+            <li>Add the palm oil, crayfish and stir all together.
+                 Add one seasoning cube, ground pepper, snails and salt to taste,
+                  allow cooking for 3-5 minutes.</li>
+            <li>Add the water-leaves; allow to simmer for 6 minutes while you stir 
+                continuously.</li>
+            <li>Add the ground ukazi leaves. Stir all together,
+                 cover the pot and allow another 5 minutes,
+                  stirring every 2 minutes.</li>
+            <li>and you are done with a delicious afang soup.</li>
+            <li>Serve with eba, fufu or pounded yam</li>
         </ol>
         <a href="../index.html">Home</a>
     </body>
