--- a/recipes/okro.html
+++ b/recipes/okro.html
@@ -2,36 +2,50 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Banga Soup</title>
+        <title>Okro Soup</title>
     </head>
 
     <body>
         <h1>Okro Soup</h1>
-        <img src="" alt="Okro Soup">
+        <img src="../images/okro_soup.jpg" alt="Okro Soup"
+        height="310" width="310">
+        <p>Photo by: <a href="https://commons.wikimedia.org/wiki/User:Bukky658">Bukky658</a>
+             / <a href="https://creativecommons.org/licenses/by-sa/4.0/"> CC BY-SA 4.0 </a></p>
         <h2>Description</h2>
-        <p></p>
+        <p>Okra soup is a popular West African, particularly Nigerian, soup featuring chopped
+             okra as a key ingredient, combined with various meats or fish, spices, 
+             and sometimes vegetables like spinach or Ugu leaf. It is known for its
+              distinct slimy texture, a result of the okra, and is often served with 
+              staples like fufu, eba, or pounded yam. Okra soup is valued for being 
+              nutritious and relatively easy to prepare.  </p>
         <h2>Ingredient</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Sliced Okra (a medium-size bowl full)</li>
+            <li>Stockfish head (medium size)</li>
+            <li>1 kg of meat (chicken)</li>
+            <li>5 shombo peppers</li>
+            <li>2 scotch bonnet peppers</li>
+            <li>500g mackerel</li>
+            <li>2 seasoning cubes</li>
+            <li>Salt to taste.</li>
+            <li>200ml Red (palm) oil</li>
+            <li>half cup of ground crayfish</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Wash the fish/chicken and season with a half teaspoon of salt,
+                 two seasoning cubes, a cup of water, and half a cup of sliced onions. 
+                 Allow it to boil together for 10-15 minutes. Remove them while leaving
+                  the stock in the pot.</li>
+            <li>Add the stockfish to the boiling pot, one more cup of water, and cook 
+                for about 10 minutes till they are soft for consumption.
+                Add two cups of water.</li>
+            <li>Introduce 200ml of palm oil, add the crayfish, pepper/shombo, and salt to taste. 
+                Let it boil for 8 minutes. Add the cooked chicken/fish and allow simmering for
+                 three more minutes.</li>
+            <li>Add the sliced okra and stir. Drop the cooked mackerel fish on top. 
+                Allow simmering for 3-4 minutes, and you are done with this delicious soup. 
+                You can serve ofe okro with eba, fufu or pounded yam.</li>
         </ol>
         <a href="../index.html">Home</a>
     </body>
