--- a/recipes/palmoil_rice.html
+++ b/recipes/palmoil_rice.html
@@ -2,36 +2,60 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Banga Soup</title>
+        <title>Palm-Oil Rice</title>
     </head>
 
     <body>
         <h1>Palm-Oil Rice</h1>
-        <img src="" alt="Palm-Oil Rice">
+        <img src="../images/palm_oil_rice.jpg" alt="Palm-Oil Rice"
+        height="310" width="310">
+                <p>Photo by User: DeletedUser <a href="https://commons.wikimedia.org/wiki/File:MTN_rice.jpg">
+            Wikimedia Commons</a>
+        / <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
         <h2>Description</h2>
-        <p></p>
+        <p>Palm oil rice, also known as "Native Jollof Rice" or Iwuk Edesi,
+             is a one-pot Nigerian rice dish distinguished by its use of palm oil,
+              which provides a deep reddish-orange color, earthy flavor, and rich,
+               satisfying taste. It incorporates local ingredients like crayfish,
+                iru (fermented locust beans), and smoked fish or meat, and can
+                 also include leafy greens such as ugu (pumpkin leaves) or spinach. </p>
         <h2>Ingredient</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>2 cups of rice</li>
+            <li>1 cup Pepper mix tatashe(Red bell pepper,
+                 ata rodo (scotch bonnet chilli), tomato and
+                  onions blended)Smoked fish of any type1-2 
+                  cooking spoons of palm oil</li>
+            <li>1 small onion chopped</li>
+            <li>3 tbsp ground crayfish</li>
+            <li>Few pieces of dried herring palamu optional</li>
+            <li>1 tsp Salt use according to preference</li>
+            <li>1 tbsp beef bouillon optional</li>
+            <li>Scent leaves substitute with basil1-2 handfuls
+                 of any greens of choice I used spinach</li>
+            <li>2 tbsp locust beans optional</li>
+            <li>½ cup palm oil</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Wash rice clean and set aside, if you want to parboil the rice,
+                 you can do so.</li>
+            <li>Wash and soak your dried fish then set aside and you don’t need
+                 to soak the smoked fish</li>
+            <li>Place a pan on medium heat, add palm oil and heat for about 5
+                 minutes but don’t bleach</li>
+            <li>Add chopped onions and fry till translucent, add the pepper mix
+                 and crayfish, seasoning and salt and cook till oil floats on 
+                 top of the sauce.</li>
+            <li>Add rice to the sauce and stir to combine, add water to cover the
+                 rice by 1 inch and reduce the heat.Do keep an eye on the rice,
+                  add water if required. After about 7 minutes, add the dried fish to the rice.
+                   Continue to cook rice on low heat till 95% done, (Add water to rice a little
+                    at a time as at when needed) Check for salt and seasoning and adjust accordingly,
+                     add the smoked fish andstir carefully to combine.</li>
+            <li>Cook for another 5 minutes then add basil (Scent leaves) and your greens of choice to rice.
+                 Continue cooking till rice is soft but not soggy.</li>
+            <li>Take it off the heat and set aside to cool. Serve immediately</li>
         </ol>
         <a href="../index.html">Home</a>
     </body>
