--- a/recipes/banga.html
+++ b/recipes/banga.html
@@ -7,31 +7,65 @@
 
     <body>
         <h1>Banga Soup</h1>
-        <img src="" alt="Banga Soup">
+        <img src="../images/banga_soup.jpg" alt="Banga Soup"
+        height="310" width="310">
+        <p>Photo by: <a href="https://commons.wikimedia.org/wiki/User:Aderiqueza"> Aderiqueza</a>
+        / <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
         <h2>Description</h2>
-        <p></p>
+        <p>Banga soup is a rich, flavorful palm nut soup originating from
+             the Niger Delta region of Nigeria. It is made with fresh palm fruit
+              extract, a variety of meats and fish, and a special blend of spices.
+               It is distinct from the Igbo version, called Ofe Akwu, by the unique
+                spices used and its preferred accompaniments. </p>
         <h2>Ingredient</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>800 g palm fruit concentrate</li>
+            <li>1 tablespoon banga spice you can buy ready mix or simply make your
+                 own by blending Ataiko and Irugeje in a dry mill</li>
+            <li>1-2 tablespoons Beletete leaves</li>
+            <li>1 Oburunbebe stick</li>
+            <li>6 medium size fresh catfish steak washed and gutted</li>
+            <li>800 g assorted beef I used shaki, ponmo and cow-leg</li>
+            <li>1 cup fresh shrimps</li>
+            <li>½ cup dried prawns</li>
+            <li>2-3 scotch bonnet blended</li>
+            <li>1 cup dried cod panla washed and shredded</li>
+            <li>1 cup periwinkle optional</li>
+            <li>2 Seasoning cubes or use as desired about 1 teaspoon stock powder</li>
+            <li>Salt to taste</li>
+            <li>1 small onion</li>
+            <li>1.6 litre water that includes the quantity of beef stock used</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Season assorted beef and dried fish with salt, onions, seasoning cubes,
+                 add water and bring to boil till tender.
+                  (Separate meat from stock and reserve stock)</li>
+            <li>Place a large pan on medium heat, add palm nut fruit and
+                 dilute with warm water double of the amount of palm fruit used.
+                  I used 800g of palm fruit so I added 1.6ltr of water to the pan.
+                   You can add any tough beef at this point, this will help soften 
+                   it more and the flavour infuses as well</li>
+            <li>Stir till well combined and bring to boil for about 20 minutes. Don’t
+                 cover the pan with a lid at this point as it would boil over.
+                  Put a wooden spoon across the pot to stop this from happening</li>
+            <li>At this point, you will see the palm fruit extract bubbling and starting
+                 to thicken, and the oil floating on top of the soup</li>
+            <li>Add blended scotch bonnet, assorted beef, periwinkle and cook for 
+                another 10-15 minutes</li>
+            <li>Add Banga spice, oburunbebe stick, ground crayfish and cook for another 10 minutes.
+                 The Banga spice adds a very rich aroma to the soup and you can just smell it.
+                  Check for salt and seasoning, dilute the soup with reserved stock if it is too thick.
+                   (Stir in between to avoid soup sticking to the bottom of the pan)</li>
+            <li>I left the catfish till the tail end of my cooking because it doesn’t
+                 take time to cook at all.</li>
+            <li>Add fresh fish and shrimps to the soup, add the beletete leaves or bitter leaf
+                 and leave to cook on low heat for another 10-12 minutes.
+                  (if you need to stir at any point after you have added the fresh fish, 
+                  you will need to be careful or you can simply hold the pan on its 2 handles with 
+                  a napkin and give it a little twirl)</li>
+            <li>Your soup is ready to be served with starch, Eba, fufu, pounded yam or any other 
+                swallow of your choice</li>
         </ol>
         <a href="../index.html">Home</a>
     </body>
